BEE-1 Partition distribute added
